argocd/loki-stack/NetworkPolicy.yaml
# https://editor.cilium.io/
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki-stack
  namespace: loki-stack
spec:
  podSelector:
    matchLabels:
      app: loki
      name: loki-stack
      release: loki-stack
  ingress:
    # Allow from pods in the prometheus namespace
    # that match with app.kubernetes.io/instance: prometheus
    # and app.kubernetes.io/name: grafana
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: prometheus
        podSelector:
          matchLabels:
            app.kubernetes.io/instance: prometheus
            app.kubernetes.io/name: grafana
      ports:
        - protocol: TCP
          port: 3100
    # Allow from pods in the same namespace
    # that match with app.kubernetes.io/name: promtail
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: promtail
      ports:
        - protocol: TCP
          port: 3100
  policyTypes:
    - Ingress
